Bug #5315
5234 misidentifies cases we need to replace representative lwp
Start date:
2014-11-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
In 5234, we misidentify the cases where we need to replace the representative lwp, which leads native dumps or those in the lx brand to incorrectly display the state of the representative lwp.
Updated by Robert Mustacchi over 6 years ago
- Subject changed from 5234 misidentifies cases we need to replace representitive lwp to 5234 misidentifies cases we need to replace representative lwp
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
git commit 2ecbc63a795e55973d5278384ecf60b2737798e1
commit 2ecbc63a795e55973d5278384ecf60b2737798e1 Author: Jerry Jelinek <jerry.jelinek@joyent.com> Date: 2014-11-13T00:48:56.000Z 5315 5234 misidentifies cases we need to replace representative lwp Reviewed by: Timothy J Fontaine <tj.fontaine@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>