5315 5234 misidentifies cases we need to replace representative lwp Reviewed by: Timothy J Fontaine <tj.fontaine@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>